[package]
name = "gfbson"
version = "0.1.0"
edition = "2024"
description = "gfbson is a Rust crate for Good-Feel's BSON format."
readme = "README.md"
keywords = ["GoodFeel", "Nintendo"]
license = "MIT"
repository = "https://github.com/Swiftshine/gfbson"

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0.228", features = ["derive"], optional = true}
serde_json = { version = "1.0.149", features = ["preserve_order"], optional = true}
thiserror = "2.0.18"

[features]
json = ["serde", "serde_json"]
